# sheet2graph

./: .gitignore  .~lock.sales_data.csv#  Makefile  README.md  mycommand.py  requirements.txt  sales_data.csv  setup.cfg  setup.py  tests.py
src/sheet2graph/: __init__.py  sheet2graph.py  tests.py
src/sheet2graph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_data/: sales_data.ods
