[metadata]
name = sheet2graph
version = 0.1.59
author = Jesus Mejuto
author_email = j@mejuto.co
description = Generate graphs from spreadsheets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fromzerotofullstack/sheet2graph
project_urls =
    Bug Tracker = https://github.com/fromzerotofullstack/sheet2graph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sheet2graph = sheet2graph.sheet2graph:entry